--- a/README
+++ b/README
@@ -1,3 +1,2 @@
-== Rubot
-
-You should document your project here.
+Rubot is a very modular, very simple IRC bot framework in Ruby.
+Documentation is pending.
